maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: illegal start of simple expression
  if(!aMurOuest && !)
                    ^JediEscaper:12: error: ')' expected but '}' found.
} 
^