maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  // Your code here
}

def prop(x:Int,y:Int){
  var marquage:Int=getIndication(x,y)
	if ((!aMurNord())&& !getIndication(x,y-1)<marquage){
    setIndication(x,y-1,marquage+1)
  }
  if(!aMurOuest && !)
}